Minimal vm slowdebug build fails with undefined reference to MetaspaceShared::is_valid_shared_method

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: None
    • Component/s: hotspot
    • b21

      Per [~stefank]

      /home/stefank/hg/jdk10/hs/build/slowdebug_32/hotspot/variant-minimal/libjvm/objs/method.o: In function `Method::is_valid_method() const':
      /home/stefank/hg/jdk10/hs/hotspot/src/share/vm/oops/method.cpp:2177: undefined reference to `MetaspaceShared::is_valid_shared_method(Method const*)'

      This fails on minimal only for slowdebug, but not for release or fastdebug.

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: