8183038: Minimal vm slowdebug build fails with undefined reference to MetaspaceShared::is_valid_shared_method

Added missing NOT_CDS_RETURN_(false)

Reviewed-by: jiangli, coleenp